--- a/assets/css/search_style.css
+++ b/assets/css/search_style.css
@@ -2,6 +2,14 @@ body {
 	font-family: 'Manrope', 'Roboto', sans-serif;
 }
 
+header, footer {
+    min-height: 15vh;
+}
+
+section {
+    min-height: 70vh;
+}
+
 #slideshow {
 	background-repeat: no-repeat;
 	background-size: cover;
