--- a/assets/css/seats_style.css
+++ b/assets/css/seats_style.css
@@ -2,6 +2,14 @@ body {
   font-family: 'Manrope', 'Roboto', sans-serif;
 }
 
+header, footer {
+  min-height: 15vh;
+}
+
+section {
+  min-height: 70vh;
+}
+
 section h1 {
   color: #1d3557;
   text-align: center !important;
